// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react/Form > renders correctly - loading next step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      class="perseid-form__step perseid-form__step--initial--root__0--active"
      id="root__0"
    >
      <div
        id="step"
      >
        {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"active":true}
      </div>
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"root.0"}
  </div>
</form>
`;

exports[`react/Form > renders correctly - loading next step 2`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      class="perseid-form__step perseid-form__step--initial--root__0--active"
      id="root__0"
    >
      <div
        id="step"
      >
        {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"active":true}
      </div>
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"root.0"}
  </div>
</form>
`;

exports[`react/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      class="perseid-form__step perseid-form__step--initial--root__0"
      id="root__0"
    >
      <div
        id="step"
      >
        {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"active":false}
      </div>
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"second.0"}
  </div>
</form>
`;

exports[`react/Form > renders correctly - with active step 2`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      class="perseid-form__step perseid-form__step--initial--root__0--active"
      id="root__0"
    >
      <div
        id="step"
      >
        {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"active":true}
      </div>
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"root.0"}
  </div>
</form>
`;
